--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "rps-frame",
+  "name": "farcaster-game",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  }
 }
