--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "farcaster-game",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",  // यह ES Module के लिए जरूरी है
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   }
 }
+
