--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,18 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": ".well-known/farcaster.json",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
       "src": "/.well-known/farcaster.json",
-      "headers": { "Content-Type": "application/json" },
-      "continue": true
+      "headers": {
+        "Content-Type": "application/json"
+      }
     },
     {
       "src": "/(.*)",
@@ -18,3 +23,4 @@
     }
   ]
 }
+
